<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/scheduleFragment">

    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.example.zyyschedule.fragment.ScheduleFragment"
        android:label="@string/main_menu_schedule" />
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.zyyschedule.fragment.CalendarFragment"
        android:label="@string/main_menu_calendar"
        tools:layout="@layout/calendar_fragment" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.zyyschedule.fragment.SettingFragment"
        android:label="@string/main_menu_setting"
        tools:layout="@layout/setting_fragment" />


</navigation>