<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_10dp"
            android:layout_marginEnd="@dimen/space_10dp"
            android:background="@drawable/add_schedule"
            android:paddingStart="@dimen/space_14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/schedule_delete_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/color_schedule_start"
                android:textSize="@dimen/text_size_24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/schedule_list_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_list_finish_head"
                android:textColor="@color/color_schedule_start"
                android:textSize="@dimen/text_size_24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/delete_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_2dp"
                    app:srcCompat="@drawable/ic_baseline_delete_outline_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_button_text"
                    android:textColor="@color/color_schedule_start"
                    android:textSize="@dimen/text_size_24sp" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>